Fix css truncation of static fields

--- a/src/stylesheets/components/_metadata.scss
+++ b/src/stylesheets/components/_metadata.scss
@@ -53,7 +53,8 @@ $default-padding-horizontal: 12px !default;
   }
 
   label,
-  .editable {
+  .editable,
+  .static {
     @include css-truncation;
   }
 
